--- a/_posts/2011-02-17-character-encode.textile
+++ b/_posts/2011-02-17-character-encode.textile
@@ -4,6 +4,8 @@ title: 关于字符集和编码
 category: notes
 time: 03:00:06
 ---
+文章太好了，转自：http://blog.webshuo.com/?p=538
+
 很久很久以前，有一群人，他们决定用8个可以开合的晶体管来组合成不同的状态，以表示世界上的万物。他们看到8个开关状态是好的，于是他们把这称为”字节”。
 
 再后来，他们又做了一些可以处理这些字节的机器，机器开动了，可以用字节来组合出很多状态，状态开始变来变去。他们看到这样是好的，于是它们就这机器称为”计算机”。
