--- a/_posts/2011-03-21-convert-unix-windows-txt-file.textile
+++ b/_posts/2011-03-21-convert-unix-windows-txt-file.textile
@@ -5,8 +5,6 @@ category: notes
 time: 06:56:35
 ---
 
-h3. Unix和Windows文件格式转换
-
 The format of Windows and Unix text files differs slightly. In Windows, lines end with both the line feed and carriage return ASCII characters, but Unix uses only a line feed. As a consequence, some Windows applications will not show the line breaks in Unix-format files. Likewise, Unix programs may display the carriage returns in Windows text files with Ctrl-m ( ^M ) characters at the end of each line.
 
 There are many ways to solve this problem. This document provides instructions for using FTP, screen capture, unix2dos and dos2unix, tr, awk, Perl, and vi to do the conversion. To use these utilities, the files you are converting must be on a Unix computer.
@@ -94,4 +92,4 @@ p{color:red}. Note: To input the ^M character, press Ctrl-v , and then press Ent
 In vim, use :set ff=unix to convert to Unix; use :set ff=dos to convert to Windows.
 
 
-From : http://kb.iu.edu/data/acux.html
+h4. From : http://kb.iu.edu/data/acux.html
