--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 tontinme's blog 
 powered by jekyll
 based on lzyy's blog 
-Everything is still in the process of being created
+Everything is still in progress
