--- a/_posts/2011-09-05-2011-today-is-import.textile
+++ b/_posts/2011-09-05-2011-today-is-import.textile
@@ -4,21 +4,22 @@ title: 慢慢前行
 category: life
 time: 23:00:24
 ---
-  两圈，嗯，已经过了两圈了。
-  还是那一趟地铁，还是那两趟公交。穿过小区往北，绕过IBM的楼，青青草地，那还算清>
-出门公交，4，5站地，上地购物中心，才发现那久违的繁华已经和自己格格不入，但我还是
-还是公交，但不往东，反转过来，有农大，也有老字号，和百旺山。再往南，到西苑，4号>
+    两圈，嗯，已经过了两圈了。
+    还是那一趟地铁，还是那两趟公交。穿过小区往北，绕过IBM的楼，青青草地，那还算清澈的池塘，但总没时间去。
+出门公交，4，5站地，上地购物中心，才发现那久违的繁华已经和自己格格不入，但我还是在北京。
+还是公交，但不往东，反转过来，有农大，也有老字号，和百旺山。再往南，到西苑，4号线，各种快餐，
 很多人到颐和园。原来我往城里走了这么久，还在圆明园以北，还是郊区。
-  下班回家，找一个街边摊，地沟油，毒纸巾，填饱肚子。9月了，晚上凉了，7点钟天就开
-夏天，结束了。上周路过北大，熙熙攘攘，开学了啊，进门不要身份证了吧。总有些人很幸
-  即是特殊的日子，总期待好事，所以豁然了，那些小事，便不计较，便过的舒服。可期待
-只能再期待。想想有时候把消极的东西带给了周围的人，总是不对，所以该反省一下了，哪
+    下班回家，找一个街边摊，地沟油，毒纸巾，填饱肚子。9月了，晚上凉了，7点钟天就开始黑了。所以，又一个
+夏天，结束了。上周路过北大，熙熙攘攘，开学了啊，进门不要身份证了吧。总有些人很幸福，当然是出国的那批。
+    即是特殊的日子，总期待好事，所以豁然了，那些小事，便不计较，便过的舒服。可期待的总没有来，于是
+只能再期待。想想有时候把消极的东西带给了周围的人，总是不对，所以该反省一下了，哪能老做这种损人不利己
 的事呢。
+
 
 那些重要的日子
 2008
- !http://i51.tinypic.com/143pel4.jpg! 
+ !http://i51.tinypic.com/143pel4.jpg 150*700! 
 2009
- !http://i55.tinypic.com/28inx3s.jpg! 
+ !http://i55.tinypic.com/28inx3s.jpg 150*700! 
 2010
- !http://i53.tinypic.com/2ltiwrs.jpg! 
+ !http://i53.tinypic.com/2ltiwrs.jpg 150*700! 
