--- a/_posts/2011-10-14-dell-raid-rebuild-prgress.textile
+++ b/_posts/2011-10-14-dell-raid-rebuild-prgress.textile
@@ -62,33 +62,29 @@ A physical disk drive property indicating the status of the drive. A physical di
 the following states:
 
 {% highlight console %}
-Unconfigured Good
+>Unconfigured Good
 A disk accessible to the RAID controller but not configured as a part of a virtual disk or as a hotspare.
-Online
+>Online
 A physical disk can be accessed by the RAID controller and is part of the virtual disk.
-rebuild
+>rebuild
 A physical disk to which data is being written to restore full redundancy for a virtual disk.
-failed
+>failed
 A physical disk that was originally configured as Online but on which the firmware detects an unrecoverable error.
-Unconfigured bad
-A physical disk on which the firmware detects an unrecoverable error; the physical disk was Unconfigured Good or 
-the physical disk could not be initialized.
+>Unconfigured bad
+A physical disk on which the firmware detects an unrecoverable error; the physical disk was Unconfigured Good or the physical disk could not be initialized.
 Disks with a status of "Unconfigured bad" cannot be used for RAID configurations.
-Missing
+>Missing
 A physical disk that was Online, but which has been removed from its location.
-offline
- The drive is offline or absent. No actions can be performed on the drive until it is back online.
-Global hotspare
-The drive will be used to repair any array in the system that had a drive failure, if the failed drive is 
-equal to, or smaller than the hot spare drive.
-Ready
+>offline
+The drive is offline or absent. No actions can be performed on the drive until it is back online.
+>Global hotspare
+The drive will be used to repair any array in the system that had a drive failure, if the failed drive is equal to, or smaller than the hot spare drive.
+>Ready
 The drive is online and operating correctly.
-Foreign
-The drive is part of an array created on a different controller, or created within one enclosure and moved to 
-another on the same controller. It can be used to create a new array after clearing configuration.
-None
-A physical disk with the unsupported flag set. An Unconfigured Good or Offline physical disk that has completed 
-the prepare for removal operation.
-copyback
+>Foreign
+The drive is part of an array created on a different controller, or created within one enclosure and moved to another on the same controller. It can be used to create a new array after clearing configuration.
+>None
+A physical disk with the unsupported flag set. An Unconfigured Good or Offline physical disk that has completed the prepare for removal operation.
+>copyback
 {% endhighlight %}
 
