you life style and everything you want

--- a/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
+++ b/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
@@ -5,51 +5,69 @@ category: thinking
 time: 21:45:33
 ---
     “这不是我要过的生活！我要过的生活是如何如何的！我好想改变，可是不能！”
-    
     “这是我要过的生活！虽然有这样那样的缺点，但是我不会放弃的！！”
-    
     “我也曾经有过想要的生活呀，但是我最后撑不住了，只好向生活投降了……”
-    
     “你应该过这样的生活呀，（省略描述若干）这才是真正的生活！”
-    
     可是每个人正过着的生活，都是自己选择的。
 　　
-　　
-    萨特说人有选择的自由，又说他人即地狱。借他这说法，往极端点，人的确是自由的。比如说，你在牢狱里等着秋后问斩。你可以选择等一个月后吃顿断头酒然后死，也可以选择逃狱——哪位说了，逃狱成功概率极低，而且抓住就当场斩首，断头酒和一个月时光都没了。这就属于后果，是你需要承担的。但理论上，你还是有选择的自由。
+    萨特说人有选择的自由，又说他人即地狱。借他这说法，往极端点，人的确是自由的。比如说，你在牢狱里等着
+秋后问斩。你可以选择等一个月后吃顿断头酒然后死，也可以选择逃狱——哪位说了，逃狱成功概率极低，而且抓住就
+当场斩首，断头酒和一个月时光都没了。这就属于后果，是你需要承担的。但理论上，你还是有选择的自由。
 
-    换个温和点的例子。五年前，我有个朋友陷于左右为难。爸妈逼结婚，他不愿结，真觉得生不如死。我在一边帮着出馊主意：“那就结呀！”
+    换个温和点的例子。五年前，我有个朋友陷于左右为难。爸妈逼结婚，他不愿结，真觉得生不如死。我在一边帮着
+出馊主意：“那就结呀！”
     “我又不想结！我跟那姑娘和那家都处不好。”
     “那就跟爸妈闹翻。”
     “那我爸妈得多生气啊，我妈心脏不好！”
-    最后他还是结婚了，挺简单：他最后还是放不下爸妈。他试图过沟通和说服，但用他的话说，“我爸妈不像你爸妈那么开通。”所以最后，他也只好这么做了。我说这个，不是想宣扬愚孝或包办婚姻可悲不敢付让爸妈心酸难过的代价，只想说明：对他来说，结婚很苦，但已经是可选择范围内的最优选择——比起让他那对无法说服的父母伤心断肠闹翻来说。没有完美解读时，人只能两害相权取其轻。
+    最后他还是结婚了，挺简单：他最后还是放不下爸妈。他试图过沟通和说服，但用他的话说，“我爸妈不像你爸妈
+那么开通。”所以最后，他也只好这么做了。我说这个，不是想宣扬愚孝或包办婚姻可悲不敢付让爸妈心酸难过的代价
+，只想说明：对他来说，结婚很苦，但已经是可选择范围内的最优选择——比起让他那对无法说服的父母伤心断肠闹翻
+来说。没有完美解读时，人只能两害相权取其轻。
     
     
     管仲有段名言：
-    “吾始困时，尝与鲍叔贾，分财利多自与，鲍叔不以我为贪，知我贫也。吾尝为鲍叔谋事，而更穷困，鲍叔不以我为愚，知时有利不利也。吾尝三仕三见逐於君，鲍叔不以我为不肖，知我不遭时也。吾尝三战三走，鲍叔不以我为怯，知我有老母也。公子纠败，召忽死之，吾幽囚受辱，鲍叔不以我为无耻，知我不羞小节而耻功名不显于天下也。生我者父母，知我者鲍子也。”
+    “吾始困时，尝与鲍叔贾，分财利多自与，鲍叔不以我为贪，知我贫也。吾尝为鲍叔谋事，而更穷困，鲍叔不以我为
+为愚，知时有利不利也。吾尝三仕三见逐於君，鲍叔不以我为不肖，知我不遭时也。吾尝三战三走，鲍叔不以我为怯，
+知我有老母也。公子纠败，召忽死之，吾幽囚受辱，鲍叔不以我为无耻，知我不羞小节而耻功名不显于天下也。生我者
+父母，知我者鲍子也。”
     
     简单说：管仲以前做啥丢人事，鲍叔牙都不责备他，因为知道他做此选择，必有苦衷，必有舍不下的。
     
-    
-    有句话流传过，所谓“幼稚的男人可以为梦想壮烈的牺牲，而成熟的男人则可以为梦想屈辱地活着”。当然这话未必精当。唐睢阳失陷，南霁云本来“欲将以有为也”——我理解是，他想留下命来，诈降，当无间道——但张巡喊他一嗓子“南八，男儿死耳，不可为不义屈”，南八便慨然就死。这是南霁云的选择：他本来打算为一些高尚的目的屈辱的活着，但显然，张巡这一嗓子喊过，他宁愿干脆牺牲，不愿负了张巡。
+    有句话流传过，所谓“幼稚的男人可以为梦想壮烈的牺牲，而成熟的男人则可以为梦想屈辱地活着”。当然这话未必
+精当。唐睢阳失陷，南霁云本来“欲将以有为也”——我理解是，他想留下命来，诈降，当无间道——但张巡喊他一嗓子“
+南八，男儿死耳，不可为不义屈”，南八便慨然就死。这是南霁云的选择：他本来打算为一些高尚的目的屈辱的活着，
+但显然，张巡这一嗓子喊过，他宁愿干脆牺牲，不愿负了张巡。
     所以，也有些男人壮烈牺牲，并不是因为他们幼稚。
     
+    世上南八这样的烈汉和睢阳这样的传奇很少，但大体上，众生皆苦，每个人都有些放不下的，有形无形的东西。佛
+家说“求不得”是苦，所以教人“放下”。但到那地步，谈何容易？
     
-    世上南八这样的烈汉和睢阳这样的传奇很少，但大体上，众生皆苦，每个人都有些放不下的，有形无形的东西。佛家说“求不得”是苦，所以教人“放下”。但到那地步，谈何容易？
-    
-    我有个很好的动漫控朋友，自己还没什么爸爸样子，就要了儿子。当了爸爸，忙得涛走云飞，寻一清闲下午看两小时漫画就是他人生至乐了，但时常求不得。跟他瞎聊时说，有法子没？有。
+    我有个很好的动漫控朋友，自己还没什么爸爸样子，就要了儿子。当了爸爸，忙得涛走云飞，寻一清闲下午看两小
+时漫画就是他人生至乐了，但时常求不得。跟他瞎聊时说，有法子没？有。
     ——当初不要孩子？那样会开心些，但长辈那边会有压力，自己也会觉得哪不对劲。
     ——对孩子马虎些？自己会对太太歉然，而且觉得很没责任感。
-    ——所以归根到底，他说，养着孩子，累归累苦归苦烦归烦，但心情还算平静，没什么愧悔之处。当然他也苦笑：如果脸皮厚一点，就好了。
+    ——所以归根到底，他说，养着孩子，累归累苦归苦烦归烦，但心情还算平静，没什么愧悔之处。当然他也苦笑：
+如果脸皮厚一点，就好了。
     
+    有些嫁娶了非如意对象的人，是因为豁不出去和爸妈吵翻；有些在大城市拼命不愿回故乡纳福的人，是因为不想
+受“不甘心”的煎熬；有些敢于辞掉稳定工作去做点什么的人，是因为日夜被梦想与流逝的时间催逼不过。每个人的生活
+和苦衷，只有自己能完全了解。人生时刻在做选择，大多数时候又偏鱼与熊掌无法兼得。
+    所以，每个人此刻所经历的生活，都是自己选择出来的——每个人必然都有未竞的梦想，但实现那些梦想的生活，必
+然要舍弃许多现有的东西。
     
-    有些嫁娶了非如意对象的人，是因为豁不出去和爸妈吵翻；有些在大城市拼命不愿回故乡纳福的人，是因为不想受“不甘心”的煎熬；有些敢于辞掉稳定工作去做点什么的人，是因为日夜被梦想与流逝的时间催逼不过。每个人的生活和苦衷，只有自己能完全了解。人生时刻在做选择，大多数时候又偏鱼与熊掌无法兼得。
-    所以，每个人此刻所经历的生活，都是自己选择出来的——每个人必然都有未竞的梦想，但实现那些梦想的生活，必然要舍弃许多现有的东西。
+    每个人所珍视的东西千奇百怪，子非鱼不知鱼之乐。我的某些朋友认为理想高于一切，我的另一些朋友认为父母比
+理想重要得多，我的一个朋友觉得开家西北风味凉皮馆比工作有意义得多，我还有个朋友觉得出国留学固然是好但她喜
+欢能够每天按时上班按时去某一家喝巧克力陪男朋友的生活。每个人所不肯放弃的东西如此不同，于是世界多种多样。
     
+    我一直尊敬对自己理想的生活方式（无论多么奇怪）持之以恒的人——实际上我自己有许多幼稚呆傻的理想一直在践
+行着——但用句菲茨杰拉德的话，“当你想批评人时，记住，并不是世上所有人都和你有一样的条件”，我觉得，过着违背
+自己心愿生活的人（为数不少吧？），说到底只是价值观不同。一个人肯放弃理想，并承担内心的失落感，一定是因为
+命运给他安排了更割舍不得的东西（比如，我那位被迫结婚的朋友，那对不那么好沟通的双亲）。也只有你自己知道，
+你自己的人生，自己的价值观里，那对你究竟有多重要。
     
-    每个人所珍视的东西千奇百怪，子非鱼不知鱼之乐。我的某些朋友认为理想高于一切，我的另一些朋友认为父母比理想重要得多，我的一个朋友觉得开家西北风味凉皮馆比工作有意义得多，我还有个朋友觉得出国留学固然是好但她喜欢能够每天按时上班按时去某一家喝巧克力陪男朋友的生活。每个人所不肯放弃的东西如此不同，于是世界多种多样。
-    
-    
-    我一直尊敬对自己理想的生活方式（无论多么奇怪）持之以恒的人——实际上我自己有许多幼稚呆傻的理想一直在践行着——但用句菲茨杰拉德的话，“当你想批评人时，记住，并不是世上所有人都和你有一样的条件”，我觉得，过着违背自己心愿生活的人（为数不少吧？），说到底只是价值观不同。一个人肯放弃理想，并承担内心的失落感，一定是因为命运给他安排了更割舍不得的东西（比如，我那位被迫结婚的朋友，那对不那么好沟通的双亲）。也只有你自己知道，你自己的人生，自己的价值观里，那对你究竟有多重要。
-    
-    
-    这个世界并不公平，许多时候造化弄人还很混蛋。甘苦取舍，放不下的东西为何重要，有多难放掉，只有自己知道。弗罗斯特的诗说，“抱歉我没法同时选两条路”。无论你选择过什么或将要选择什么，无论别人或你自己偶尔也哀怨说你没选的那条路看上去如何动人当初应该如何如何或者将来应该如何如何，都没什么值得愧悔的。选择一种生活，就是选择了不去冒另一种生活的风险。无论他人或你自己如何说，你至少选择保留了一些你不肯割舍的某样东西。不管是父母、亲人、理想还是安全感，抑或是许多他人完全无法理解的事物。也只有你自己知道，你自己的人生，自己的价值观里，那对你究竟有多重要。
+    这个世界并不公平，许多时候造化弄人还很混蛋。甘苦取舍，放不下的东西为何重要，有多难放掉，只有自己知道
+。弗罗斯特的诗说，“抱歉我没法同时选两条路”。无论你选择过什么或将要选择什么，无论别人或你自己偶尔也哀怨说
+你没选的那条路看上去如何动人当初应该如何如何或者将来应该如何如何，都没什么值得愧悔的。选择一种生活，就是
+选择了不去冒另一种生活的风险。无论他人或你自己如何说，你至少选择保留了一些你不肯割舍的某样东西。不管是父
+母、亲人、理想还是安全感，抑或是许多他人完全无法理解的事物。也只有你自己知道，你自己的人生，自己的价值观
+里，那对你究竟有多重要。
