you life style and everything you want

--- a/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
+++ b/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
@@ -21,20 +21,20 @@ time: 21:45:33
 “那我爸妈得多生气啊，我妈心脏不好！”
 最后他还是结婚了，挺简单：他最后还是放不下爸妈。他试图过沟通和说服，但用他的话说，“我爸妈不像你爸妈
 那么开通。”所以最后，他也只好这么做了。我说这个，不是想宣扬愚孝或包办婚姻可悲不敢付让爸妈心酸难过的
-代价，只想说明：对他来说，结婚很苦，但已经是可选择范围内的最优选择——比起让他那对无法说服的父母伤心断
-肠闹翻来说。没有完美解读时，人只能两害相权取其轻。
+代价，只想说明：对他来说，结婚很苦，但已经是可选择范围内的最优选择——比起让他那对无法说服的父母伤心
+断肠闹翻来说。没有完美解读时，人只能两害相权取其轻。
 　　
 管仲有段名言：
-“吾始困时，尝与鲍叔贾，分财利多自与，鲍叔不以我为贪，知我贫也。吾尝为鲍叔谋事，而更穷困，鲍叔不以我为
-愚，知时有利不利也。吾尝三仕三见逐於君，鲍叔不以我为不肖，知我不遭时也。吾尝三战三走，鲍叔不以我为怯
-，知我有老母也。公子纠败，召忽死之，吾幽囚受辱，鲍叔不以我为无耻，知我不羞小节而耻功名不显于天下也。
-生我者父母，知我者鲍子也。”
+“吾始困时，尝与鲍叔贾，分财利多自与，鲍叔不以我为贪，知我贫也。吾尝为鲍叔谋事，而更穷困，鲍叔不以我
+为愚，知时有利不利也。吾尝三仕三见逐於君，鲍叔不以我为不肖，知我不遭时也。吾尝三战三走，鲍叔不以我为
+怯，知我有老母也。公子纠败，召忽死之，吾幽囚受辱，鲍叔不以我为无耻，知我不羞小节而耻功名不显于天下也
+。生我者父母，知我者鲍子也。”
 简单说：管仲以前做啥丢人事，鲍叔牙都不责备他，因为知道他做此选择，必有苦衷，必有舍不下的。
 
 有句话流传过，所谓“幼稚的男人可以为梦想壮烈的牺牲，而成熟的男人则可以为梦想屈辱地活着”。当然这话未必
-精当。唐睢阳失陷，南霁云本来“欲将以有为也”——我理解是，他想留下命来，诈降，当无间道——但张巡喊他一嗓子
-“南八，男儿死耳，不可为不义屈”，南八便慨然就死。这是南霁云的选择：他本来打算为一些高尚的目的屈辱的活
-着，但显然，张巡这一嗓子喊过，他宁愿干脆牺牲，不愿负了张巡。
+精当。唐睢阳失陷，南霁云本来“欲将以有为也”——我理解是，他想留下命来，诈降，当无间道——但张巡喊他一
+嗓子“南八，男儿死耳，不可为不义屈”，南八便慨然就死。这是南霁云的选择：他本来打算为一些高尚的目的屈辱
+的活着，但显然，张巡这一嗓子喊过，他宁愿干脆牺牲，不愿负了张巡。
 所以，也有些男人壮烈牺牲，并不是因为他们幼稚。
 
 世上南八这样的烈汉和睢阳这样的传奇很少，但大体上，众生皆苦，每个人都有些放不下的，有形无形的东西。佛
