add author info

--- a/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
+++ b/_posts/2011-10-18-you-life-style-and-everything-you-want.textile
@@ -70,3 +70,5 @@ time: 21:45:33
 一种生活，就是选择了不去冒另一种生活的风险。无论他人或你自己如何说，你至少选择保留了一些你不肯割舍
 的某样东西。不管是父母、亲人、理想还是安全感，抑或是许多他人完全无法理解的事物。也只有你自己知道，
 你自己的人生，自己的价值观里，那对你究竟有多重要。
+
+From：http://blog.ifeng.com/article/13618457.html
